--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ascendas",
   "version": "0.1.0",
+  "homepage": "https://cymstx.github.io/Ascendas-Loyalty",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -9,10 +10,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^2.9.5",
-    "bootstrap": "^5.1.3",
-    "node-sass": "^7.0.1",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "framer-motion": "^2.9.5",
+    "gh-pages": "^4.0.0",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
@@ -23,6 +24,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
