--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-RESTREVIEWS_DB_URI=mongodb+srv://fauzaan:1vSrKEDpr45wErCM@cluster0.nt1bu1m.mongodb.net/sample_restaurants?retryWrites=true&w=majority
-RESTREVIEWS_NS = sample_restaurants
+RESTREVIEWS_DB_URI=mongodb+srv://fauzaan:1vSrKEDpr45wErCM@cluster0.nt1bu1m.mongodb.net/ascendas_handback_file?retryWrites=true&w=majority
+RESTREVIEWS_NS = ascendas_handback_file
 PORT = 5000
