--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
-RESTREVIEWS_DB_URI=mongodb+srv://fauzaan:1vSrKEDpr45wErCM@cluster0.nt1bu1m.mongodb.net/ascendas_handback_file?retryWrites=true&w=majority
+RESTREVIEWS_DB_URI = mongodb+srv://fauzaan:1vSrKEDpr45wErCM@cluster0.nt1bu1m.mongodb.net/ascendas_handback_file?retryWrites=true&w=majority
+MONGO_COMPASS_CONNECET = mongodb+srv://fauzaan:1vSrKEDpr45wErCM@cluster0.nt1bu1m.mongodb.net/test
 RESTREVIEWS_NS = ascendas_handback_file
 PORT = 5000
