--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "fast-csv": "^4.3.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.18",
+    "ssh2-sftp-client": "^9.0.2"
   },
   "description": ""
 }
