--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fast-csv": "^4.3.6",
+    "json2csv": "^5.0.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
     "nodemon": "^2.0.18",
