--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "convert-csv-to-json": "^1.3.3",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fast-csv": "^4.3.6",
@@ -19,7 +22,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
     "nodemon": "^2.0.18",
-    "ssh2-sftp-client": "^9.0.2"
+    "ssh2-sftp-client": "^9.0.2",
+    "stream-to-mongo-db": "^1.6.0"
   },
   "description": ""
 }
