--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bson": "^4.6.5",
     "convert-csv-to-json": "^1.3.3",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
@@ -20,6 +21,7 @@
     "fast-csv": "^4.3.6",
     "json2csv": "^5.0.7",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.8.0",
     "mongoose": "^6.4.0",
     "nodemon": "^2.0.18",
     "ssh2-sftp-client": "^9.0.2",
