--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "bson": "^4.6.5",
     "convert-csv-to-json": "^1.3.3",
@@ -27,6 +28,5 @@
     "ssh2-sftp-client": "^9.0.2",
     "stream-to-mongo-db": "^1.6.0"
   },
-  "devDependencies": {},
   "description": ""
 }
