--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://cymstx.github.io/Ascendas-Loyalty",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
