--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-highlight-words": "^0.18.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "selenium-webdriver": "^4.4.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^2.1.4"
   },
